header section added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,52 @@
 </head>
 
 <body>
-
+    <header class="header_section">
+        <div class="container">
+            <!--header banner1 starts-->
+            <div class="header_banner1">
+                <div class="banner1_title">
+                    <h3>Happy New Year</h3>
+                    <h2>New Year Party<br> Celebration</h2>
+                </div>
+            </div>
+            <!--header banner1 ends-->
+            <!--header add starts-->
+            <div class="header_add">
+                <div class="add_title">
+                    <h2>65% OFF</h2>
+                </div>
+                <div class="add_description">
+                    <h4>OUR HOLIDAY DEALS ARE BETTER</h4>
+                    <h3>ALL CATEGORIES</h3>
+                </div>
+                <div class="add_image">
+                    <img src="Images/New Year Photo.png" alt="">
+                </div>
+            </div>
+            <!--header add starts-->
+            <!--header banner2 starts-->
+            <div class="header_banner2">
+                <div class="banner2_info">
+                    <div class="banner2_title">
+                        <h2>Welcome to<br> midnight party</h2>
+                    </div>
+                    <div class="banner2_description">
+                        <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie<br> malesuada.
+                            Ipsum
+                            sed sodales risus ut pellentesque vel euismod. </p>
+                    </div>
+                    <div class="banner2_button">
+                        <a href="#">JOIN NOW</a>
+                    </div>
+                </div>
+                <div class="banner2_image">
+                    <img src="Images/Group 70.png" alt="2024_Image">
+                </div>
+            </div>
+            <!--header banner2 ends-->
+        </div>
+    </header>
 </body>
 
 </html>
