--- a/index.html
+++ b/index.html
@@ -61,6 +61,38 @@
             <!--header banner2 ends-->
         </div>
     </header>
+    <main class="main_section">
+        <div class="container">
+            <div class="join_section">
+                <div class="join_desc">
+                    <h3><span>Place:</span> New Park Hotel</h3>
+                    <h3 class="join_date"><span>Date:</span> 31 December Night 2023</h3>
+                    <h3><span>Time:</span> Evening 7.30 pm to 12.30 am</h3>
+                </div>
+                <div class="join_button">
+                    <button class="btn">JOIN NOW</button>
+                </div>
+            </div>
+            <div class="offer_section">
+                <div class="offer_info">
+                    <h3 class="offer_title1">NEW BEST OFFER</h3>
+                    <h2 class="offer_title2">Coming Soon</h2>
+                    <p class="offer_desc">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie
+                        malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                </div>
+                <div class="offer_image">
+                    <img src="Images/Ellipse 1.png" alt="">
+                </div>
+                <div class="offer_year">
+                    <h2 class="year">2024</h2>
+                    <p class="year_info">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                    <div class="year_sticker">
+                        <img src="Images/Group 96.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
