--- a/index.html
+++ b/index.html
@@ -91,6 +91,21 @@
                     </div>
                 </div>
             </div>
+            <div class="discount_section">
+                <div class="discount_info">
+                    <h3 class="discount_title1">WHAT IS FUNCTIONAL</h3>
+                    <h2 class="discount_title2"><span>Holidays</span> Sale 50%</h2>
+                    <p class="discount_description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                        molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus
+                        quam id fermentum amet amet sit consectetur.</p>
+                </div>
+                <div class="discount_images">
+                    <img class="group75" src="Images/Group 75.png" alt="">
+                    <img class="Rectangle1" src="Images/Rectangle 1.png" alt="">
+                    <img class="group44" src="Images/Group 44.png" alt="">
+                    <img class="Rectangle2" src="Images/Rectangle 2.png" alt="">
+                </div>
+            </div>
         </div>
     </main>
 </body>
