--- a/index.html
+++ b/index.html
@@ -106,6 +106,22 @@
                     <img class="Rectangle2" src="Images/Rectangle 2.png" alt="">
                 </div>
             </div>
+            <div class="products_section">
+                <div class="products_info">
+                    <h3 class="products_title1">THE BEST GIFTS</h3>
+                    <h2 class="products_title2">Our Awesome Portfolio</h2>
+                    <p class="products_desc">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                        molestie malesuada.<br> Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                </div>
+                <div class="products_images">
+                    <img src="Images/Rectangle 3.png" alt="">
+                    <img src="Images/Rectangle 4.png" alt="">
+                    <img src="Images/Rectangle 5.png" alt="">
+                    <img src="Images/Rectangle 6.png" alt="">
+                    <img src="Images/Rectangle 7.png" alt="">
+                    <img src="Images/Rectangle 8.png" alt="">
+                </div>
+            </div>
         </div>
     </main>
 </body>
