--- a/index.html
+++ b/index.html
@@ -122,6 +122,22 @@
                     <img src="Images/Rectangle 8.png" alt="">
                 </div>
             </div>
+            <div class="subscribe_section">
+                <div class="sub_info">
+                    <img src="Images/Group 61.png" alt="" class="mail_image">
+                    <h2 class="sub_title">Subscribe Newsletter</h2>
+                    <p class="sub_desc">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie
+                        malesuada.<br> Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                </div>
+                <div class="form_area">
+                    <div class="form">
+                        <input type="email" placeholder="Enter Email" class="form-box">
+                    </div>
+                    <div class="button">
+                        <button class="sub_btn">Subscribe</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 </body>
