--- a/index.html
+++ b/index.html
@@ -140,6 +140,31 @@
             </div>
         </div>
     </main>
+    <footer>
+        <div class="container">
+            <div class="contact_section">
+                <div class="address">
+                    <p>44, Big Building Roosevelt Street<br> Beach Gardens Florida 33410</p>
+                </div>
+                <div class="email_phone">
+                    <p><img class="contact_icon" src="Images/Call.png" alt="">+00 123 584 124</p>
+                    <p><img class="contact_icon" src="Images/Website.png" alt="">www.website.com</p>
+                </div>
+            </div>
+            <hr>
+            <div class="website_section">
+                <img src="Images/Facebook.png" alt="">
+                <img src="Images/Linkedin.png" alt="">
+                <img src="Images/Instagram.png" alt="">
+                <img src="Images/Twitter.png" alt="">
+            </div>
+            <hr>
+            <div class="copyright_section">
+                <p>2024, All Rights Reserved.</p>
+                <p>Unsubscribe</p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
